[package]
name = "dns-lookup"
version = "1.0.8"
authors = ["Josh Driver <keeperofdakeys@gmail.com>"]
description = "A simple dns resolving api, much like rust's unstable api. Also includes getaddrinfo and getnameinfo wrappers for libc variants."
documentation = "https://docs.rs/dns-lookup"
repository = "https://github.com/keeperofdakeys/dns-lookup/"
readme = "README.md"
keywords = ["raw","buffer","dns", "resolve", "lookup", "getaddrinfo", "getnameinfo"]
license = "MIT/Apache-2.0"
include = [
    "src/**",
    "README.md",
    "LICENSE*",
    "Cargo.*"
]

[dependencies]
socket2 = "^0.4"
clippy = {version = "^0", optional = true}
cfg-if = "^1.0"
byteorder = "1.4.3"

[target."cfg(windows)".dependencies.winapi]
version = "^0.3"
default-features = false
byteorder = "1.4.3"
features = ["windef", "ws2def", "ws2tcpip","winsock2"]

[target."cfg(unix)".dependencies]
byteorder = "1.4.3"
libc = "^0.2"